# KDECodexBar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug_gemini.py
.github/workflows/: aur-publish.yml
build-release/: ecm_uninstall.cmake
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/src/app/: kdecodexbar
build-release/src/app/kdecodexbar_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-release/src/app/kdecodexbar_autogen/EWIEGA46WW/: moc_MenuWidget.cpp  moc_MenuWidget.cpp.d  moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d  moc_TrayIcon.cpp  moc_TrayIcon.cpp.d
build-release/src/core/kdecodexbar-core_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-release/src/core/kdecodexbar-core_autogen/EWIEGA46WW/: moc_AntigravityProvider.cpp  moc_AntigravityProvider.cpp.d  moc_ClaudeProvider.cpp  moc_ClaudeProvider.cpp.d  moc_CodexProvider.cpp  moc_CodexProvider.cpp.d  moc_GeminiProvider.cpp  moc_GeminiProvider.cpp.d  moc_Provider.cpp  moc_Provider.cpp.d  moc_ProviderRegistry.cpp  moc_ProviderRegistry.cpp.d  moc_PtySession.cpp  moc_PtySession.cpp.d
packaging/: PKGBUILD
packaging/aur/: .SRCINFO  PKGBUILD  README.md
resources/: codexbar.desktop
src/app/: CMakeLists.txt  IconRenderer.cpp  IconRenderer.h  MenuWidget.cpp  MenuWidget.h  SettingsDialog.cpp  SettingsDialog.h  TrayIcon.cpp  TrayIcon.h  main.cpp
src/core/: AntigravityProvider.cpp  AntigravityProvider.h  CMakeLists.txt  ClaudeProvider.cpp  ClaudeProvider.h  CodexProvider.cpp  CodexProvider.h  GeminiProvider.cpp  GeminiProvider.h  Provider.cpp  Provider.h  ProviderRegistry.cpp  ProviderRegistry.h  PtySession.cpp  PtySession.h
